Styles albums on profile page, fixes gap between album rows

--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -47,13 +47,14 @@ a:hover{
 .large-8{
   width:100%;
 }
-.panel.home{
+.panel.home {
   border: none;
   background: rgba(0,0,0,0.3);
-  position: relative;
-  bottom:65px;
+  position: absolute;
+  bottom: -20px;
+  width: 100%;
   padding: 0.5rem;
-  height:66px;
+  height: 66px;
 }
 .panel.home h6{
   color: #fff;
